--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: scroll_velocity_listener
 description: A widget that wraps scroll views and outputs velocity
-version: 0.0.3
-homepage:
+version: 0.0.4
+homepage: https://github.com/pstromberg98/scroll_velocity_listener
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
